deploy/environments/local/workloads/mailpit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: mailpit
spec:
  selector:
    app: mailpit
  ports:
    - port: 8025
      targetPort: 8025
      name: http
    - port: 1025
      targetPort: 1025
      name: smtp
